Add full sprint6 with additional tasks (Implementing a custom scenario)